--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
   "require": {
     "php": "^8.1",
     "ext-pdo": "*",
-    "laravel/framework": "v10.*"
+    "laravel/framework": "v10.*",
+    "gianfriaur/laravel-fast-cache": "v1.0.0"
   },
   "require-dev": {
     "orchestra/testbench": "^8.0",
